k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  labels:
    app: tasky
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
        - name: tasky
          image: 438465147858.dkr.ecr.us-west-2.amazonaws.com/wizex-tasky-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
